test/bad/generics/print03.px

func f<T>(T x) T def
    return x

print [(f(write), f(2))]
